--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "canadapost-api",
-	"version": "1.0.4",
-	"description": "A more complete Canada Post API library",
+	"name": "canadapost-api-international",
+	"version": "1.0.0",
+	"description": "This package has minor changes for international rates api changes, this package is wrapper of canadapost-api npm package",
 	"main": "lib/canadapost.js",
 	"scripts": {
 		"test": "./node_modules/.bin/mocha --timeout 60000 ./test"
@@ -11,10 +11,11 @@
 		"post",
 		"canada",
 		"shipping",
-		"canadapost"
+        "canadapost",
+        "international"
 	],
-	"author": "\"Kevin S\" <kevin@chilicode.ca>",
-	"repository": "https://github.com/t3rminus/canada-post.git",
+	"author": "\"Milind Pasi\" <milpas999@gmail.com>",
+	"repository": "https://github.com/milpas999/canada-post.git",
 	"license": "MIT",
 	"dependencies": {
 		"lodash.camelcase": "^4.3.0",
